# PAOO_LAB

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Container/: CMakeLists.txt  container.cpp  container.hpp
src/DockerContainer/: CMakeLists.txt  dockercontainer.cpp  dockercontainer.hpp
src/Image/: CMakeLists.txt  image.cpp  image.hpp
src/System/: CMakeLists.txt  system.cpp  system.hpp
src/VirtualComponent/: CMakeLists.txt  virtualcomponent.hpp
src/VirtualMachine/: CMakeLists.txt  virtualmachine.cpp  virtualmachine.hpp
